unblu6.html updated

--- a/unblu6.html
+++ b/unblu6.html
@@ -59,7 +59,7 @@
   }
 </script>
     <script src="https://upcoming.demo.unblu.com/unblu/js-api/v2/visitor/visitor-api.min.js"></script>
-    <script type="text/javascript" src="./assets/unblu.js"></script>
+    <script type="text/javascript" src="./assets/upcomingUnblu.js"></script>
 
     <!-- TEALIUM HEAD CONTAINER TAG START -->
     <script type="text/javascript" src="./assets/utag.sync.js"></script>
